# cache-array-sync

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  photo-sync-debug.conf  photo-sync.sh  prometheus.yml
config/: cache-array-sync.service  photo-sync.conf.example
development/: launch.json
examples/: main_integration_example.cpp  monitoring_integration_example.cpp
include/: configuration.hpp  file_system_monitor.hpp  metrics_collector.hpp  sync_manager.hpp  thread_pool.hpp
include/sys/: fanotify_handle.hpp  file_descriptor.hpp  inotify_handle.hpp  memory_mapped_file.hpp
scripts/: build_tests.sh
src/: configuration.cpp  configuration.hpp  file_system_monitor.cpp  file_verification.hpp  inotify_example.cpp  main.cpp  metrics_collector.cpp  metrics_collector.hpp  photo-sync.sh  priority_sync_queue.hpp  robust_sync_manager.hpp  sync_manager.cpp  thread_pool.cpp  thread_pool.hpp  transaction_log.hpp
tests/: CMakeLists.txt  README.md  configuration_test.cpp  file_system_monitor_test.cpp  metrics_collector_test.cpp  mock_file_system_monitor.hpp  mock_file_system_monitor_test.cpp  sync_manager_test.cpp  thread_pool_test.cpp
